# Antonio

./: .gitmodules  README.md
Antonio_Docker/: Docker_script.sh  Dockerfile  README.md  bashrc  entrypoint.sh  node-to-run.txt
Antonio_Docker/antonio_ws/: frames_2024-04-25_14.12.40.gv  frames_2024-06-27_10.49.42.gv
Antonio_Docker/antonio_ws/config/: mapper_params_online_async.yaml
Antonio_Docker/antonio_ws/maps/: map.pgm  map.yaml  map_1714571258.pgm  map_1714571258.yaml  map_2.pgm  map_2.yaml
Antonio_Docker/antonio_ws/maps/PCD_file/: test_pcd.pcd
Antonio_Docker/antonio_ws/maps/octomap/: map.bt  map.ot  map_1.bt  map_2.bt  map_3.bt
Antonio_Docker/antonio_ws/src/antonio_description/: CMakeLists.txt  package.xml
Antonio_Docker/antonio_ws/src/antonio_description/config/: acml_config.yaml  ekf.yaml  nav2_params.yaml
Antonio_Docker/antonio_ws/src/antonio_description/launch/: bringup_launch.py  display.launch.py  localization_launch.py  map_server.launch.py  navigation_launch.py  octomap_antonio_mapping.launch.xml  rtab_launch.py
Antonio_Docker/antonio_ws/src/antonio_description/map/: map_1.pgm  map_1.yaml  map_107.yaml  map_3.pgm  map_3.yaml
Antonio_Docker/antonio_ws/src/antonio_description/rviz/: urdf_config.rviz
Antonio_Docker/antonio_ws/src/antonio_description/src/: KF.cpp  Wheels_odom_tf2_broadcaster.cpp  antonio_odom.cpp  antonio_odom_tf2_broadcaster.cpp  imu-base_linck-tf2_brodcaster.cpp  imu_camera_link-tf2_brodcaster.cpp  laser_filter.cpp  pcd_write.cpp
Antonio_Docker/antonio_ws/src/antonio_description/src/description/: antonio_description.urdf
Antonio_Docker/antonio_ws/src/pcd_manag_pkg/: CMakeLists.txt  package.xml
Antonio_Docker/antonio_ws/src/pcd_manag_pkg/src/: pcd_saver.cpp  pcd_write.cpp
Antonio_Docker/antonio_ws/src/rplidar_ros2/rviz/: rplidar.rviz
Antonio_Docker/antonio_ws/src/rplidar_ros2/src/: rplidar_node.cpp
antonio_description/: CMakeLists.txt
antonio_description/config/: ekf.yaml
antonio_description/install/: local_setup.sh  setup.sh
antonio_description/install/antonio_description/lib/antonio_description/: Wheels_odom_tf2_broadcaster
antonio_description/install/antonio_description/share/ament_index/resource_index/package_run_dependencies/: antonio_description
antonio_description/install/antonio_description/share/ament_index/resource_index/parent_prefix_path/: antonio_description
antonio_description/install/antonio_description/share/antonio_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
antonio_description/install/antonio_description/share/antonio_description/cmake/: antonio_descriptionConfig-version.cmake  antonio_descriptionConfig.cmake
antonio_description/install/antonio_description/share/antonio_description/config/: ekf.yaml  nav2_params.yaml
antonio_description/install/antonio_description/share/antonio_description/environment/: ament_prefix_path.dsv  path.dsv
antonio_description/install/antonio_description/share/antonio_description/launch/: display.launch.py
antonio_description/install/antonio_description/share/antonio_description/rviz/: urdf_config.rviz
antonio_description/install/antonio_description/share/antonio_description/src/: Wheels_odom_tf2_broadcaster.cpp
antonio_description/install/antonio_description/share/antonio_description/src/description/: antonio_description.urdf
antonio_description/install/antonio_description/share/antonio_description/src/rplidar_ros2/: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
antonio_description/install/antonio_description/share/antonio_description/world/: antonio_world.sdf
antonio_description/launch/: display.launch.py
antonio_description/log/: latest_build  latest_list
antonio_description/src/: Wheels_odom_tf2_broadcaster.cpp
learning_tf2_cpp/: package.xml
micro_ros_ws/2pico_2ccd-test/SPI_Control_pico/src/: main.c
micro_ros_ws/2pico_2ccd-test/SPI_Peripherals_pico/src/: main.c
micro_ros_ws/IMU_micro-ros_node/: CMakeLists.txt
micro_ros_ws/IMU_micro-ros_node/src/: CMakeLists.txt  main.cpp
micro_ros_ws/IMU_test/src/: CMakeLists.txt  main.cpp
micro_ros_ws/ccd_micro_ros/: CMakeLists.txt
micro_ros_ws/ccd_micro_ros/src/: CMakeLists.txt  main.c
micro_ros_ws/include/: FreeRTOSConfig.h
micro_ros_ws/pico_ccd/: CMakeLists.txt
micro_ros_ws/pico_ccd/log/: latest_list
micro_ros_ws/pico_ccd/src/: CMakeLists.txt  main.c
micro_ros_ws/pico_def_drive/: CMakeLists.txt
micro_ros_ws/pico_def_drive/src/: Antonio.cpp  CMakeLists.txt  FreeRTOSConfig.h  MotorMgr.cpp  MotorMgr.h  MotorPID.cpp  MotorsAgent.cpp  MotorsAgent.h  main.c  main.cpp
micro_ros_ws/pico_def_drive/src/include/: uRosBridge.h
micro_ros_ws/pico_def_drive_Protothreads/: CMakeLists.txt
micro_ros_ws/pico_def_drive_Protothreads/src/: CMakeLists.txt  main.cpp
micro_ros_ws/pico_def_drive_freeRTOS/log/: latest_list
rplidar_test/install/: local_setup.sh  setup.sh
rplidar_test/install/rplidar_ros/include/: rplidar_node.hpp  visibility.h
rplidar_test/install/rplidar_ros/lib/rplidar_ros/: rplidar_composition
rplidar_test/install/rplidar_ros/share/rplidar_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
rplidar_test/install/rplidar_ros/share/rplidar_ros/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  rplidar_rosConfig-version.cmake  rplidar_rosConfig.cmake
rplidar_test/install/rplidar_ros/share/rplidar_ros/environment/: ament_prefix_path.dsv  path.dsv
rplidar_test/install/rplidar_ros/share/rplidar_ros/launch/: rplidar.launch.py  rplidar_a3.launch.py  rplidar_s1.launch.py  rplidar_s1_tcp.launch.py  test_rplidar_a3.launch.py  view_rplidar.launch.py  view_rplidar_a3.launch.py  view_rplidar_s1.launch.py  view_rplidar_s1_tcp.launch.py
rplidar_test/install/rplidar_ros/share/rplidar_ros/rviz/: rplidar.rviz
rplidar_test/log/: latest_build  latest_list
(+62 files in other folders)
